Fix column alignment
#CTCTOWALTZ-1462
#4345

--- a/waltz-ng/client/common/components/grid/grid.scss
+++ b/waltz-ng/client/common/components/grid/grid.scss
@@ -26,7 +26,8 @@
     }
 
     .ui-grid-cell {
-        border-right: none
+        border-right: none;
+        text-align: left;
     }
 
     .ui-grid-viewport {
